--- a/about.qmd
+++ b/about.qmd
@@ -1,19 +1,19 @@
 ---
 title: "About"
-image: profile.jpg
+image: images/DALLE_whale.webp
 about:
   template: jolla
   links:
-    - icon: twitter
-      text: Twitter
-      href: https://twitter.com
+    - icon: envelope
+      text: Mail
+      href: oknmj101@naver.com
     - icon: linkedin
       text: LinkedIn
-      href: https://linkedin.com
+      href: https://www.linkedin.com/in/jonghwan-yoon
     - icon: github
       text: Github
-      href: https://github.com
+      href: https://github.com/jonghwanyoon
 
 ---
 
-About this blog
+Reseacher & Bioinformatician
