--- a/posts/welcome/index.qmd
+++ b/posts/welcome/index.qmd
@@ -3,6 +3,7 @@ title: "Welcome To My Blog"
 author: "Tristan O'Malley"
 date: "2024-09-14"
 categories: [news]
+draft: true
 ---
 
 This is the first post in a Quarto blog. Welcome!
