--- a/posts.qmd
+++ b/posts.qmd
@@ -2,15 +2,15 @@
 title: "Posts"
 listing:
   contents: 
-    # 노트에 대한 post는 redirection을 위해 따로 지정
-    - path: https://jonghwanyoon.github.io/notes
-      title: "Learning Journal"
-      author: jonghwan
-      image: images/cover_learning.png
-      description: "정리"
-      date: "2024-09-18"
-      categories: [Learning]
-    # 다른 post들.
+    # # 노트에 대한 post는 redirection을 위해 따로 지정
+    # - path: https://jonghwanyoon.github.io/notes
+    #   title: "Learning Journal"
+    #   author: jonghwan
+    #   image: images/cover_learning.png
+    #   description: "정리"
+    #   date: "2024-09-18"
+    #   categories: [Learning]
+    # # 다른 post들.
     - posts
   sort: "date desc"
   type: grid
@@ -20,5 +20,3 @@ listing:
 page-layout: full
 title-block-banner: true
 ---
-
-Reseacher & Bioinformatician
